--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/index.js",
   "files": [
     "dist/",
-    "src/"
+    "src/",
+    "tsconfig.json"
   ],
   "scripts": {
     "tsc": "tsc",
