--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -11,7 +11,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "tsc",
-    "pack": "npm install && tsc"
+    "prepack": "npm install && tsc"
   },
   "repository": {
     "type": "git",
