--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "files": [
     "dist/",
-    "src/"
+    "src/",
+    "tsconfig.json"
   ],
   "scripts": {
     "tsc": "tsc",
