--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^3.4.3"
   },
   "dependencies": {
+    "@azure/avocado": "^0.3.3",
     "@azure/oad": "^0.5.1",
     "@ts-common/string-map": "^0.3.0",
     "fs-extra": "^7.0.1",
