--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "files": [
+    "dist/",
     "src/"
   ],
   "scripts": {
