--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.1.8",
+  "version": "0.2.12",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -32,6 +32,7 @@
     "typescript": "^3.4.3"
   },
   "dependencies": {
+    "@azure/avocado": "^0.4.1",
     "@azure/oad": "^0.5.1",
     "@ts-common/string-map": "^0.3.0",
     "fs-extra": "^7.0.1",
