--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Azure/rest-api-specs-scripts#readme",
   "devDependencies": {
+    "@octokit/rest": "^16.25.0",
     "@types/fs-extra": "^5.0.5",
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.1",
