--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/Azure/rest-api-specs-scripts#readme",
   "devDependencies": {
-    "@octokit/rest": "^16.25.0",
     "@types/fs-extra": "^5.0.5",
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.1",
@@ -33,12 +32,14 @@
     "typescript": "^3.4.4"
   },
   "dependencies": {
+    "@octokit/rest": "^16.25.0",
     "@azure/avocado": "^0.4.1",
     "@azure/oad": "^0.5.2",
     "@ts-common/string-map": "^0.3.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "js-yaml": "^3.13.1",
+    "oav": "^0.18.1",
     "request": "^2.88.0"
   }
 }
