--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "typescript": "^3.4.4"
   },
   "dependencies": {
-    "@octokit/rest": "^16.25.0",
     "@azure/avocado": "^0.4.1",
     "@azure/oad": "^0.6.3",
+    "@octokit/rest": "^16.25.0",
     "@ts-common/string-map": "^0.3.0",
+    "@types/jsonpath": "^0.2.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "js-yaml": "^3.13.1",
