--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -27,6 +27,7 @@
     "@types/fs-extra": "^5.0.5",
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.1",
+    "@types/jsonpath": "^0.2.0",
     "@types/node": "^11.13.6",
     "@types/request": "^2.48.1",
     "typescript": "^3.4.4"
