--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,12 @@ jobs:
   pool:
     vmImage: 'Ubuntu 16.04'
   steps:
+
+  - task: Npm@1
+    displayName: 'npm install'
+    inputs:
+      verbose: false
+      
   - task: Npm@1
     displayName: 'npm test'
     inputs:
