--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,19 @@ jobs:
   pool:
     vmImage: 'Ubuntu 16.04'
   steps:
+
+  - task: Npm@1
+    displayName: 'npm install'
+    inputs:
+      verbose: false
+      
+  - task: Npm@1
+    displayName: 'npm test'
+    inputs:
+      command: custom
+      verbose: false
+      customCommand: test
+
   - task: Npm@1
     displayName: 'npm pack'
     inputs:
