--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
     "js-yaml": "^3.13.1",
     "oav": "0.20.9",
     "request": "^2.88.0",
-    "commonmark": "0.27.0",
-    "mocha-cli": "^1.0.1",
-    "mocha-typescript": "1.0.22"
+    "commonmark": "0.27.0"
   }
 }
