--- a/package.json
+++ b/package.json
@@ -24,28 +24,30 @@
   },
   "homepage": "https://github.com/Azure/rest-api-specs-scripts#readme",
   "devDependencies": {
+    "@types/commonmark": "^0.27.0",
     "@types/fs-extra": "^5.0.5",
     "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.1",
     "@types/jsonpath": "^0.2.0",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.6",
     "@types/request": "^2.48.1",
-    "typescript": "^3.4.4",
     "mocha": "^7.0.1",
     "mocha-typescript": "^1.0.22",
-    "@types/mocha": "^5.2.6",
-    "@types/commonmark": "^0.27.0"
+    "typescript": "^3.4.4"
   },
   "dependencies": {
-    "@octokit/rest": "^16.42.0",
     "@azure/avocado": "^0.4.1",
+    "@azure/event-hubs": "^5.0.2",
     "@azure/oad": "^0.7.0",
+    "@azure/storage-blob": "^12.1.1",
+    "@octokit/rest": "^16.42.0",
     "@ts-common/string-map": "^0.3.0",
+    "commonmark": "0.27.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "js-yaml": "^3.13.1",
     "oav": "0.20.9",
-    "request": "^2.88.0",
-    "commonmark": "0.27.0"
+    "request": "^2.88.0"
   }
 }
