--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.7.1",
+  "version": "0.7.2-beta",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -37,15 +37,16 @@
     "@types/commonmark": "^0.27.0"
   },
   "dependencies": {
-    "@octokit/rest": "^16.42.0",
     "@azure/avocado": "^0.4.1",
     "@azure/oad": "^0.7.0",
+    "@octokit/rest": "^16.42.0",
     "@ts-common/string-map": "^0.3.0",
+    "@zhenglaizhang/swagger-validation-common": "^1.0.1",
+    "commonmark": "0.27.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "js-yaml": "^3.13.1",
     "oav": "0.21.3",
-    "request": "^2.88.0",
-    "commonmark": "0.27.0"
+    "request": "^2.88.0"
   }
 }
