--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@types/jsonpath": "^0.2.0",
     "@types/node": "^11.13.6",
     "@types/request": "^2.48.1",
+    "@types/mocha": "^5.2.6",
+    "@types/commonmark": "^0.27.0",
+    "@types/sinon": "^9.0.0",
     "typescript": "~3.4.4",
     "mocha": "^7.0.1",
     "mocha-typescript": "^1.0.22",
-    "@types/mocha": "^5.2.6",
-    "@types/commonmark": "^0.27.0"
+    "sinon": "^9.0.2"
   },
   "dependencies": {
     "@octokit/rest": "^16.42.0",
