--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -30,11 +30,13 @@
     "@types/jsonpath": "^0.2.0",
     "@types/node": "^11.13.6",
     "@types/request": "^2.48.1",
+    "@types/mocha": "^5.2.6",
+    "@types/commonmark": "^0.27.0",
+    "@types/sinon": "^9.0.0",
     "typescript": "~3.4.4",
     "mocha": "^7.0.1",
     "mocha-typescript": "^1.0.22",
-    "@types/mocha": "^5.2.6",
-    "@types/commonmark": "^0.27.0"
+    "sinon": "^9.0.2"
   },
   "dependencies": {
     "@octokit/rest": "^16.42.0",
