--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "js-yaml": "^3.13.1",
-    "oav": "0.21.6",
+    "oav": "^0.21.6",
     "request": "^2.88.0",
     "commonmark": "0.27.0"
   }
