--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
        {
         "type": "node",
         "request": "launch",
@@ -24,6 +25,18 @@
         "args": [
             "--inspect-brk",
             "${workspaceFolder}/dist/tests/momentOfTruthTest.js"
+        ],
+        "port": 9229,
+        "internalConsoleOptions": "openOnSessionStart"
+    }
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Mocha Test MomentOfTruthPostProcessing",
+        "program": "${workspaceRoot}/node_modules/mocha/bin/mocha",
+        "args": [
+            "--inspect-brk",
+            "${workspaceFolder}\\src\\tests\\momentOfTruthPostProcessingTest.ts"
         ],
         "port": 9229,
         "internalConsoleOptions": "openOnSessionStart"
