Support lint diff in unified pipeline. (#54)
* support lint diff in unified pipeline

* support lint diff in unified pipeline

* support lint diff in unified pipeline

* support lint diff in unified line

* support lint diff in unified line

* support lint diff in unified pipeline

* support lint diff in unified pipeline

* support lint diff in unified pipeline

Co-authored-by: Xiaoxu Qi <xiaoxuqi@microsoft.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,18 @@
         ],
         "port": 9229,
         "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Mocha Test MomentOfTruthPostProcessing",
+        "program": "${workspaceRoot}/node_modules/mocha/bin/mocha",
+        "args": [
+            "--inspect-brk",
+            "${workspaceFolder}/dist/tests/momentOfTruthPostProcessingTest.js"
+        ],
+        "port": 9229,
+        "internalConsoleOptions": "openOnSessionStart"
     }
     ]
 }
