--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,27 @@
     {
         "type": "node",
         "request": "launch",
+        "name": "Run tests currently",
+        "cwd": "${workspaceRoot}",
+        "internalConsoleOptions": "openOnSessionStart",
+        "env": {
+            "TS_NODE_IGNORE": "false"
+        },
+        "program": "${workspaceRoot}/node_modules/mocha/bin/mocha",
+        "args": [
+            "-r",
+            "ts-node/register",
+            "--timeout",
+            "999999",
+            "--colors",
+            "${file}"
+        ],
+        "outFiles": [],
+        "protocol": "inspector"
+    },
+    {
+        "type": "node",
+        "request": "launch",
         "name": "Mocha Test MomentOfTruth",
         "program": "${workspaceRoot}/node_modules/mocha/bin/mocha",
         "args": [
