--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/rest-api-specs-scripts",
-  "version": "0.11.0",
+  "version": "0.11.1",
   "description": "Scripts for the Azure RestAPI specification repository 'azure-rest-api-specs'.",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -37,7 +37,8 @@
     "mocha": "^7.0.1",
     "mocha-typescript": "^1.0.22",
     "sinon": "^9.0.2",
-    "@types/lodash": "^4.14.149"
+    "@types/lodash": "^4.14.149",
+    "ts-node": "^8.10.2"
   },
   "dependencies": {
     "@octokit/rest": "^16.42.0",
