--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     "@azure/avocado": "^0.4.1",
     "@azure/oad": "^0.8.1",
     "@ts-common/string-map": "^0.3.0",
+    "@ts-common/source-map": "^0.5.0",
+    "@ts-common/fs": "^0.2.0",
+    "@ts-common/async-iterator": "^0.2.3",
+    "@ts-common/commonmark-to-markdown": "^1.2.0",
+    "@azure/openapi-markdown": "^0.9.2",
     "@azure/swagger-validation-common": "^0.0.3",
     "commonmark": "0.27.0",
     "fs-extra": "^7.0.1",
