--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "lanuch run",
+            "program": "${workspaceFolder}/dist/runlintDiffLocal.js",
+            "args": [
+                "10623"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
+        },
        {
         "type": "node",
         "request": "launch",
