Update azure-pipelines.yml (#93)
* Update azure-pipelines.yml

* Update azure-pipelines.yml

* Update azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,23 +1,19 @@
 trigger:
 - master
 
+variables:
+  Codeql.Enabled: true
+
 jobs:
 - job: Build
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: 'Ubuntu 20.04'
   steps:
 
   - task: Npm@1
     displayName: 'npm install'
     inputs:
       verbose: false
-      
-  - task: Npm@1
-    displayName: 'npm test'
-    inputs:
-      command: custom
-      verbose: false
-      customCommand: test
 
   - task: Npm@1
     displayName: 'npm pack'
